- Added a title message when a player is kicked from the team (#210)
- Fixed potential issue with placeholders to throw errors 

Bug Fixes:
- Fixed bug where `enforceTag` does not work as expected (#350) (#348)
- Fixed bugs causing errors on empty YAML files

4.5.0: 

Features: 
- Added Serbian translations - Credit DjomlaCommunity (#366)
- Added /teama money <set/add/remove> <balance> command (#365)

Bug Fixes: 
- Fixed bug where BetterTeams causes a server crash if the database connection times out (#360)
- Fixed bug where invalid storage files cause /team top and /team baltop to throw errors (#363)
- TNT explosions caused by players on your own team will not cause damage
- Do not send blank messages for the /team info command (#370)
- Fixed case issue with `inteam` placeholder (#371)
- Fixed bug with event priority not being set for Damage Managerment

4.6.0:

Features: 
- Added support for asynchronous command execution (#317 #396)
- Added Italian translations - credit Bern (discord)

Improvements
- Added missing spanish translations - Credit Casho (discord)

Bug Fixes: 
- Fixed bug with error message not giving information about the error itself (#390)
- Fixed bug with error message not giving tracable information to fix the problem (#394)

4.6.1:

Bug Fixes:
- Fixed bug with errors being thrown when players join

4.6.1:

Improvements: 
- Added language selected to /teama  version

4.6.2:

Improvements:
- Fixed issue with polish translations (#404) - Credit Edekoo (discord)

Bug Fixes:
- Fixed bug causing echest contents to not be saved (#407) 
- Fixed issue with admins running the echest command (#402)
- Fixed bug when invalid files are within the teaminfo folder (#400)

4.6.3:

Improvements:
- Updated to the latest version of zKoth (#418, #188) - Credit abilnf (GitHub) and Derddy (Discord) 

Bug Fixes:
- Fixed issue causing holographic displays to not work (#416)

Headings: 
Features: 


Improvements:


Bug Fixes: 
